fix overlapping unit dropdown (#1509)

--- a/packages/webapp/src/components/Form/Unit/unit.module.scss
+++ b/packages/webapp/src/components/Form/Unit/unit.module.scss
@@ -98,6 +98,7 @@
   z-index: 0;
   display: flex;
   justify-content: flex-end;
+  pointer-events: none;
 }
 
 .verticleDivider {
